fix(tag): bug vertical align ie11

--- a/packages/tag/src/index.module.css
+++ b/packages/tag/src/index.module.css
@@ -84,7 +84,7 @@
 }
 
 .xs {
-    min-height: 32px;
+    height: 32px;
     padding: 4px 16px;
     border-radius: 32px;
     font-size: 14px;
@@ -93,7 +93,7 @@
 }
 
 .s {
-    min-height: 48px;
+    height: 48px;
     padding: 4px 16px;
     border-radius: 48px;
     font-size: 16px;
@@ -102,7 +102,7 @@
 }
 
 .m {
-    min-height: 56px;
+    height: 56px;
     padding: 4px 24px;
     border-radius: 56px;
     font-size: 16px;
@@ -111,7 +111,7 @@
 }
 
 .l {
-    min-height: 68px;
+    height: 68px;
     padding: 4px 32px;
     border-radius: 68px;
     font-size: 18px;
